prediction Q in LASSO

--- a/exercises/Exercise_1-LASSO/Exercise_1_LASSO.html
+++ b/exercises/Exercise_1-LASSO/Exercise_1_LASSO.html
@@ -372,7 +372,9 @@ compromised performance under high collinearity scenarios.</p>
 </div>
 <div id="exercise-objectives" class="section level2">
 <h2>Exercise Objectives</h2>
-<p>Your task is to implement the following experiment:</p>
+<p>Your task is to implement the following experiment from: <em>Zhao,
+P., &amp; Yu, B. (1970, January 1). On model selection consistency of
+lasso. Journal of Machine Learning Research. <a href="http://jmlr.org/papers/v7/zhao06a.html" class="uri">http://jmlr.org/papers/v7/zhao06a.html</a></em> :</p>
 <div id="data-generation" class="section level3">
 <h3>Data Generation</h3>
 <ol style="list-style-type: decimal">
